--- a/index1.html
+++ b/index1.html
@@ -59,15 +59,6 @@
             <li class="card" type="bicycle">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card" type="diamond">
-                <i class="fa fa-diamond"></i>
-            </li>
-            <li class="card" type="bomb">
-                <i class="fa fa-bomb"></i>
-            </li>
-            <li class="card" type="leaf">
-                <i class="fa fa-leaf"></i>
-            </li>
             <li class="card" type="bomb">
                 <i class="fa fa-bomb"></i>
             </li>
@@ -76,6 +67,15 @@
             </li>
             <li class="card" type="bicycle">
                 <i class="fa fa-bicycle"></i>
+            </li>
+            <li class="card" type="diamond">
+                <i class="fa fa-diamond"></i>
+            </li>
+            <li class="card" type="bomb">
+                <i class="fa fa-bomb"></i>
+            </li>
+            <li class="card" type="leaf">
+                <i class="fa fa-leaf"></i>
             </li>
             <li class="card" type="plane">
                 <i class="fa fa-paper-plane-o"></i>
@@ -88,7 +88,7 @@
         <div id="popup1" class="overlay">
             <div class="popup">
               <h2>Congratulations</h2>
-                <a class="close" href=# >×</a>
+                <a class="close" href=# >Ã—</a>
                 <div class="content-1">
                     Congratulations you're a winner ????
                 </div>
