--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
+    <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Tangerine">
     
     <link rel="stylesheet" href="css/app1.css">
 </head>
@@ -88,7 +88,7 @@
         <div id="popup1" class="overlay">
             <div class="popup">
               <h2>Congratulations</h2>
-                <a class="close" href=# >×</a>
+                <a class="close" href=# >Ã—</a>
                 <div class="content-1">
                     Congratulations you're a winner ????
                 </div>
